@@ -1,3 +1,8 @@
+2009-10-19  Ross Younger  <wry@ecoscentric.com>
+
+	* nand_synth.c: Update to interface v2.
+	* nand_synth.cdl: Require CYGSEM_IO_NAND_INTERFACE_VERSION >= 2.
+
 2009-09-28  Ross Younger  <wry@ecoscentric.com>
 
 	* tests: Don't put unreasonably large arrays on stack. Build-fix
